// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compilation > apply 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "f",
                  },
                  "type": "name",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "x",
                      },
                      "type": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "type": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                            "value": "f",
                          },
                          "type": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "type": "int",
                            "value": "x",
                          },
                          "type": "name",
                        },
                      ],
                      "data": {
                        "type": "int",
                      },
                      "type": "application",
                    },
                  ],
                  "data": {
                    "isTopFunction": true,
                    "type": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                  },
                  "type": "func",
                },
              ],
              "data": {
                "isTopFunction": true,
                "type": {
                  "fn": {
                    "arg": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                    "return": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                  },
                },
              },
              "type": "func",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "x",
                  },
                  "type": "name",
                },
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": "x",
                  },
                  "type": "name",
                },
              ],
              "data": {
                "isTopFunction": true,
                "type": {
                  "fn": {
                    "arg": "int",
                    "return": "int",
                  },
                },
              },
              "type": "func",
            },
          ],
          "data": {
            "type": {
              "fn": {
                "arg": "int",
                "return": "int",
              },
            },
          },
          "type": "application",
        },
        {
          "children": [],
          "data": {
            "type": "int",
            "value": 2,
          },
          "type": "number",
        },
      ],
      "data": {
        "type": "int",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;

exports[`compilation > church tuple 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "x",
                      },
                      "type": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "y",
                          },
                          "type": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {
                                "value": "m",
                              },
                              "type": "name",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "data": {
                                        "type": {
                                          "fn": {
                                            "arg": "int",
                                            "return": {
                                              "fn": {
                                                "arg": "int",
                                                "return": "int",
                                              },
                                            },
                                          },
                                        },
                                        "value": "m",
                                      },
                                      "type": "name",
                                    },
                                    {
                                      "children": [],
                                      "data": {
                                        "type": "int",
                                        "value": "x",
                                      },
                                      "type": "name",
                                    },
                                  ],
                                  "data": {
                                    "type": {
                                      "fn": {
                                        "arg": "int",
                                        "return": "int",
                                      },
                                    },
                                  },
                                  "type": "application",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "type": "int",
                                    "value": "y",
                                  },
                                  "type": "name",
                                },
                              ],
                              "data": {
                                "type": "int",
                              },
                              "type": "application",
                            },
                          ],
                          "data": {
                            "isTopFunction": true,
                            "type": {
                              "fn": {
                                "arg": {
                                  "fn": {
                                    "arg": "int",
                                    "return": {
                                      "fn": {
                                        "arg": "int",
                                        "return": "int",
                                      },
                                    },
                                  },
                                },
                                "return": "int",
                              },
                            },
                          },
                          "type": "func",
                        },
                      ],
                      "data": {
                        "isTopFunction": true,
                        "type": {
                          "fn": {
                            "arg": "int",
                            "return": {
                              "fn": {
                                "arg": {
                                  "fn": {
                                    "arg": "int",
                                    "return": {
                                      "fn": {
                                        "arg": "int",
                                        "return": "int",
                                      },
                                    },
                                  },
                                },
                                "return": "int",
                              },
                            },
                          },
                        },
                      },
                      "type": "func",
                    },
                  ],
                  "data": {
                    "isTopFunction": true,
                    "type": {
                      "fn": {
                        "arg": "int",
                        "return": {
                          "fn": {
                            "arg": "int",
                            "return": {
                              "fn": {
                                "arg": {
                                  "fn": {
                                    "arg": "int",
                                    "return": {
                                      "fn": {
                                        "arg": "int",
                                        "return": "int",
                                      },
                                    },
                                  },
                                },
                                "return": "int",
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                  "type": "func",
                },
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": 1,
                  },
                  "type": "number",
                },
              ],
              "data": {
                "type": {
                  "fn": {
                    "arg": "int",
                    "return": {
                      "fn": {
                        "arg": {
                          "fn": {
                            "arg": "int",
                            "return": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                          },
                        },
                        "return": "int",
                      },
                    },
                  },
                },
              },
              "type": "application",
            },
            {
              "children": [],
              "data": {
                "type": "int",
                "value": 2,
              },
              "type": "number",
            },
          ],
          "data": {
            "type": {
              "fn": {
                "arg": {
                  "fn": {
                    "arg": "int",
                    "return": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                  },
                },
                "return": "int",
              },
            },
          },
          "type": "application",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": "x",
              },
              "type": "name",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {},
                  "type": "placeholder",
                },
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": "x",
                  },
                  "type": "name",
                },
              ],
              "data": {
                "isTopFunction": true,
                "type": {
                  "fn": {
                    "arg": "int",
                    "return": "int",
                  },
                },
              },
              "type": "func",
            },
          ],
          "data": {
            "isTopFunction": true,
            "type": {
              "fn": {
                "arg": "int",
                "return": {
                  "fn": {
                    "arg": "int",
                    "return": "int",
                  },
                },
              },
            },
          },
          "type": "func",
        },
      ],
      "data": {
        "type": "int",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;

exports[`compilation > either 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "x",
                      },
                      "type": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "m",
                          },
                          "type": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {
                                "value": "n",
                              },
                              "type": "name",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {
                                    "type": {
                                      "fn": {
                                        "arg": "int",
                                        "return": "int",
                                      },
                                    },
                                    "value": "m",
                                  },
                                  "type": "name",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "type": "int",
                                    "value": "x",
                                  },
                                  "type": "name",
                                },
                              ],
                              "data": {
                                "type": "int",
                              },
                              "type": "application",
                            },
                          ],
                          "data": {
                            "isTopFunction": true,
                            "type": {
                              "fn": {
                                "arg": {
                                  "fn": {
                                    "arg": "unknown",
                                    "return": "unknown",
                                  },
                                },
                                "return": "int",
                              },
                            },
                          },
                          "type": "func",
                        },
                      ],
                      "data": {
                        "isTopFunction": true,
                        "type": {
                          "fn": {
                            "arg": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                            "return": {
                              "fn": {
                                "arg": {
                                  "fn": {
                                    "arg": "unknown",
                                    "return": "unknown",
                                  },
                                },
                                "return": "int",
                              },
                            },
                          },
                        },
                      },
                      "type": "func",
                    },
                  ],
                  "data": {
                    "isTopFunction": true,
                    "type": {
                      "fn": {
                        "arg": "int",
                        "return": {
                          "fn": {
                            "arg": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                            "return": {
                              "fn": {
                                "arg": {
                                  "fn": {
                                    "arg": "unknown",
                                    "return": "unknown",
                                  },
                                },
                                "return": "int",
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                  "type": "func",
                },
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": 1,
                  },
                  "type": "number",
                },
              ],
              "data": {
                "type": {
                  "fn": {
                    "arg": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                    "return": {
                      "fn": {
                        "arg": {
                          "fn": {
                            "arg": "unknown",
                            "return": "unknown",
                          },
                        },
                        "return": "int",
                      },
                    },
                  },
                },
              },
              "type": "application",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "x",
                  },
                  "type": "name",
                },
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": "x",
                  },
                  "type": "name",
                },
              ],
              "data": {
                "isTopFunction": true,
                "type": {
                  "fn": {
                    "arg": "int",
                    "return": "int",
                  },
                },
              },
              "type": "func",
            },
          ],
          "data": {
            "type": {
              "fn": {
                "arg": {
                  "fn": {
                    "arg": "unknown",
                    "return": "unknown",
                  },
                },
                "return": "int",
              },
            },
          },
          "type": "application",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": "x",
              },
              "type": "name",
            },
            {
              "children": [],
              "data": {
                "type": "unknown",
                "value": "x",
              },
              "type": "name",
            },
          ],
          "data": {
            "isTopFunction": true,
            "type": {
              "fn": {
                "arg": "unknown",
                "return": "unknown",
              },
            },
          },
          "type": "func",
        },
      ],
      "data": {
        "type": "int",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;

exports[`compilation > float 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "type": "float",
        "value": 1.1,
      },
      "type": "number",
    },
  ],
  "data": {
    "type": "float",
  },
  "type": "script",
}
`;

exports[`compilation > function application and literal 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": "x",
              },
              "type": "name",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": "x",
                  },
                  "type": "name",
                },
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": "x",
                  },
                  "type": "name",
                },
              ],
              "data": {
                "type": "int",
              },
              "type": "add",
            },
          ],
          "data": {
            "isTopFunction": true,
            "type": {
              "fn": {
                "arg": "int",
                "return": "int",
              },
            },
          },
          "type": "func",
        },
        {
          "children": [],
          "data": {
            "type": "int",
            "value": 2,
          },
          "type": "number",
        },
      ],
      "data": {
        "type": "int",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;

exports[`compilation > function closure 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "x",
                  },
                  "type": "name",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "y",
                      },
                      "type": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "type": "int",
                            "value": "y",
                          },
                          "type": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {
                                "type": "int",
                                "value": 2,
                              },
                              "type": "number",
                            },
                            {
                              "children": [],
                              "data": {
                                "type": "int",
                                "value": "x",
                              },
                              "type": "name",
                            },
                          ],
                          "data": {
                            "type": "int",
                          },
                          "type": "*",
                        },
                      ],
                      "data": {
                        "type": "int",
                      },
                      "type": "add",
                    },
                  ],
                  "data": {
                    "isTopFunction": true,
                    "type": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                  },
                  "type": "func",
                },
              ],
              "data": {
                "isTopFunction": true,
                "type": {
                  "fn": {
                    "arg": "int",
                    "return": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                  },
                },
              },
              "type": "func",
            },
            {
              "children": [],
              "data": {
                "type": "int",
                "value": 1,
              },
              "type": "number",
            },
          ],
          "data": {
            "type": {
              "fn": {
                "arg": "int",
                "return": "int",
              },
            },
          },
          "type": "application",
        },
        {
          "children": [],
          "data": {
            "type": "int",
            "value": 2,
          },
          "type": "number",
        },
      ],
      "data": {
        "type": "int",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;

exports[`compilation > function deep closure 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "x",
                      },
                      "type": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "y",
                          },
                          "type": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {
                                "value": "z",
                              },
                              "type": "name",
                            },
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {
                                    "type": "int",
                                    "value": "x",
                                  },
                                  "type": "name",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "type": "int",
                                    "value": "y",
                                  },
                                  "type": "name",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "type": "int",
                                    "value": "z",
                                  },
                                  "type": "name",
                                },
                              ],
                              "data": {
                                "type": "int",
                              },
                              "type": "add",
                            },
                          ],
                          "data": {
                            "isTopFunction": true,
                            "type": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                          },
                          "type": "func",
                        },
                      ],
                      "data": {
                        "isTopFunction": true,
                        "type": {
                          "fn": {
                            "arg": "int",
                            "return": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                          },
                        },
                      },
                      "type": "func",
                    },
                  ],
                  "data": {
                    "isTopFunction": true,
                    "type": {
                      "fn": {
                        "arg": "int",
                        "return": {
                          "fn": {
                            "arg": "int",
                            "return": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                  "type": "func",
                },
                {
                  "children": [],
                  "data": {
                    "type": "int",
                    "value": 1,
                  },
                  "type": "number",
                },
              ],
              "data": {
                "type": {
                  "fn": {
                    "arg": "int",
                    "return": {
                      "fn": {
                        "arg": "int",
                        "return": "int",
                      },
                    },
                  },
                },
              },
              "type": "application",
            },
            {
              "children": [],
              "data": {
                "type": "int",
                "value": 3,
              },
              "type": "number",
            },
          ],
          "data": {
            "type": {
              "fn": {
                "arg": "int",
                "return": "int",
              },
            },
          },
          "type": "application",
        },
        {
          "children": [],
          "data": {
            "type": "int",
            "value": 5,
          },
          "type": "number",
        },
      ],
      "data": {
        "type": "int",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;

exports[`compilation > hello world string 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "type": "string",
        "value": "hello world!",
      },
      "type": "string",
    },
  ],
  "data": {
    "type": "string",
  },
  "type": "script",
}
`;

exports[`compilation > int 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "type": "int",
        "value": 1,
      },
      "type": "number",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;

exports[`compilation > print 1 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "type": "void",
            "value": "print",
          },
          "type": "name",
        },
        {
          "children": [],
          "data": {
            "type": "int",
            "value": 1,
          },
          "type": "number",
        },
      ],
      "data": {
        "type": "unknown",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "unknown",
  },
  "type": "script",
}
`;

exports[`compilation > two prints 1`] = `
{
  "children": [
    {
      "children": [],
      "data": {
        "type": "string",
        "value": "hello world!",
      },
      "type": "string",
    },
    {
      "children": [],
      "data": {
        "type": "string",
        "value": "hello world 2!",
      },
      "type": "string",
    },
  ],
  "data": {
    "type": "string",
  },
  "type": "script",
}
`;

exports[`compilation > wrapper 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "x",
                  },
                  "type": "name",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "m",
                      },
                      "type": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "type": {
                              "fn": {
                                "arg": "int",
                                "return": "int",
                              },
                            },
                            "value": "m",
                          },
                          "type": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "type": "int",
                            "value": "x",
                          },
                          "type": "name",
                        },
                      ],
                      "data": {
                        "type": "int",
                      },
                      "type": "application",
                    },
                  ],
                  "data": {
                    "isTopFunction": true,
                    "type": {
                      "fn": {
                        "arg": {
                          "fn": {
                            "arg": "int",
                            "return": "int",
                          },
                        },
                        "return": "int",
                      },
                    },
                  },
                  "type": "func",
                },
              ],
              "data": {
                "isTopFunction": true,
                "type": {
                  "fn": {
                    "arg": "int",
                    "return": {
                      "fn": {
                        "arg": {
                          "fn": {
                            "arg": "int",
                            "return": "int",
                          },
                        },
                        "return": "int",
                      },
                    },
                  },
                },
              },
              "type": "func",
            },
            {
              "children": [],
              "data": {
                "type": "int",
                "value": 2,
              },
              "type": "number",
            },
          ],
          "data": {
            "type": {
              "fn": {
                "arg": {
                  "fn": {
                    "arg": "int",
                    "return": "int",
                  },
                },
                "return": "int",
              },
            },
          },
          "type": "application",
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": "x",
              },
              "type": "name",
            },
            {
              "children": [],
              "data": {
                "type": "int",
                "value": "x",
              },
              "type": "name",
            },
          ],
          "data": {
            "isTopFunction": true,
            "type": {
              "fn": {
                "arg": "int",
                "return": "int",
              },
            },
          },
          "type": "func",
        },
      ],
      "data": {
        "type": "int",
      },
      "type": "application",
    },
  ],
  "data": {
    "type": "int",
  },
  "type": "script",
}
`;
